--- a/index.html
+++ b/index.html
@@ -19,11 +19,11 @@
             <div class="menu">
                 <nav>
                     <ul>
-                        <li><a href="#">Inicio</a></li>
-                        <li><a href="#">Electrónica</a></li>
-                        <li><a href="#">Redes IP</a></li>
-                        <li><a href="#">Inteligencia Artificial</a></li>
-                        <li><a href="#">Ciberseguridad</a></li>
+                        <li><a href="index.html">Inicio</a></li>
+                        <li><a href="electronica.html">Electrónica</a></li>
+                        <li><a href="network.html">Networking</a></li>
+                        <li><a href="ia.html">Inteligencia Artificial</a></li>
+                        <li><a href="hacking.html">Ciberseguridad</a></li>
                     </ul>
                 </nav>
             </div>
