--- a/ia.html
+++ b/ia.html
@@ -36,7 +36,7 @@
         <div class="cover">
             <div class="text__enlaces-cover">
                 <h1>Inteligencia Artificial: El futuro ahora, desbloqueando el poder de las máquinas pensantes.</h1>
-                <p>Checa los post disponibles acerca de los últimos avances sobre aprendizaje automático, redes neuronales, ChatBots, Visión artificial y Procesamiento del lenguaje natural.</p>                                
+                <p>Checa los post disponibles acerca de los últimos avances sobre aprendizaje automático, redes neuronales, chatbots, visión artificial y procesamiento del lenguaje natural.</p>                                
             </div>
         </div>    
         <!-- Primer artículo -->
