--- a/electronica.html
+++ b/electronica.html
@@ -36,7 +36,7 @@
         <div class="cover">
             <div class="text__enlaces-cover">
                 <h1>Conectando ideas, impulsando innovación: Descubre el poder de la electrónica.</h1>
-                <p>Checa los post disponibles acerca del funcionamiento de los dispositivos electrónicos, esquematicos y proyectos.</p>
+                <p>Checa los post disponibles acerca del funcionamiento de los dispositivos electrónicos, esquemáticos y proyectos.</p>
             </div>   
         </div>
         <!-- Primer artículo -->
