--- a/index.html
+++ b/index.html
@@ -6,6 +6,8 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Blog de Tecnología</title>
 
+    <script src="https://kit.fontawesome.com/9474e300a6.js" crossorigin="anonymous"></script>
+
     <link rel="stylesheet" href="css/estilos.css">
 </head>
 <body>
@@ -27,6 +29,7 @@
                     </ul>
                 </nav>
             </div>
+            <i class="fa-solid fa-bars" id="icon_menu"></i>
             <div class="header__botonMenu">
                 <input type="button" class="btn__header-botonMenu" value="Bonus">
             </div>
@@ -66,5 +69,6 @@
             </div>
         </div>
     </main>
+    <script src="js/script.js"></script>
 </body>
 </html>
