--- a/hacking.html
+++ b/hacking.html
@@ -5,7 +5,7 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Blog de Tecnología</title>
-
+    <script src="https://kit.fontawesome.com/9474e300a6.js" crossorigin="anonymous"></script>
     <link rel="stylesheet" href="css/estilos.css">
 </head>
 <body>
@@ -27,6 +27,7 @@
                     </ul>
                 </nav>
             </div>
+            <i class="fa-solid fa-bars" id="icon_menu"></i>
             <div class="header__botonMenu">
                 <input type="button" class="btn__header-botonMenu" value="Bonus">
             </div>
@@ -50,5 +51,6 @@
             <h2><a href="hacking/articulo2.html">Título del Artículo 2</a></h2>
         </div>         
     </main>
+    <script src="js/script.js"></script>
 </body>
 </html>
