--- a/network/articulo2.html
+++ b/network/articulo2.html
@@ -5,8 +5,8 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Blog de Tecnología</title>
-
-    <link rel="stylesheet" href="../css/estilos.css">
+    <script src="https://kit.fontawesome.com/9474e300a6.js" crossorigin="anonymous"></script>
+    <link rel="stylesheet" href="../css/estilos-articulo.css">
 </head>
 <body>
 
@@ -27,6 +27,7 @@
                     </ul>
                 </nav>
             </div>
+            <i class="fa-solid fa-bars" style="color: #ffffff;" id="icon_menu"></i>
             <div class="header__botonMenu">
                 <input type="button" class="btn__header-botonMenu" value="Bonus">
             </div>
@@ -39,5 +40,6 @@
                 <p>articulo dos</p>
             </div>   
     </main>
+    <script src="../js/script.js"></script>
 </body>
 </html>
