--- a/electronica.html
+++ b/electronica.html
@@ -43,7 +43,7 @@
         <!-- Primer artículo -->
         <div class="article-section">
             <img src="media/imagen1.png" alt="Imagen del artículo 1" class="article-image">
-            <h2><a href="electronica/articulo1.html">Título del Artículo 1</a></h2>
+            <h2><a href="electronica/articulo1.html">Resistencia</a></h2>
         </div>
         <!-- Segundo artículo -->
         <div class="article-section">
