--- a/electronica.html
+++ b/electronica.html
@@ -43,12 +43,20 @@
         <!-- Primer artículo -->
         <div class="article-section">
             <img src="media/imagen1.png" alt="Imagen del artículo 1" class="article-image">
-            <h2><a href="electronica/articulo1.html">Resistencia</a></h2>
+            <h2><a href="electronica/resistencia.html">Resistencia</a></h2>
         </div>
-        <!-- Segundo artículo -->
         <div class="article-section">
             <img src="media/imagen1.png" alt="Imagen del artículo 2" class="article-image">
-            <h2><a href="electronica/articulo2.html">Título del Artículo 2</a></h2>
+            <h2><a href="electronica/capacitor.html">Capacitor</a></h2>    
+        </div>
+        <div class="article-section">
+            <img src="media/imagen1.png" alt="Imagen del artículo 3" class="article-image">
+            <h2><a href="electronica/inductancia.html">Inductor</a></h2>
+        </div>
+        <!-- Nuevo artículo -->
+        <div class="article-section">
+            <img src="media/imagen1.png" alt="Imagen del artículo 2" class="article-image">
+            <h2><a href="electronica/unknown.html">En proceso</a></h2>
         </div> 
     </main>
     <script src="js/script.js"></script>
