--- a/ia.html
+++ b/ia.html
@@ -43,12 +43,16 @@
         <!-- Primer artículo -->
         <div class="article-section">
             <img src="media/imagen3.png" alt="Imagen del artículo 1" class="article-image">
-            <h2><a href="ia/articulo1.html">Título del Artículo 1</a></h2>
+            <h2><a href="ia/machineLearning.html">Machine Learning</a></h2>
+        </div>
+        <div class="article-section">
+            <img src="media/imagen3.png" alt="Imagen del artículo 1" class="article-image">
+            <h2><a href="ia/deepLearning.html">Deep Learning</a></h2>
         </div>
         <!-- Segundo artículo -->
         <div class="article-section">
             <img src="media/imagen3.png" alt="Imagen del artículo 2" class="article-image">
-            <h2><a href="ia/articulo2.html">Título del Artículo 2</a></h2>
+            <h2><a href="ia/unknown.html">En proceso</a></h2>
         </div>         
     </main>
     <script src="js/script.js"></script>
