--- a/hacking.html
+++ b/hacking.html
@@ -43,12 +43,12 @@
         <!-- Primer artículo -->
         <div class="article-section">
             <img src="media/imagen4.png" alt="Imagen del artículo 1" class="article-image">
-            <h2><a href="hacking/articulo1.html">Título del Artículo 1</a></h2>
+            <h2><a href="hacking/owasp.html">OWASP Top 10</a></h2>
         </div>
-        <!-- Segundo artículo -->
+        <!-- Nuevo artículo -->
         <div class="article-section">
             <img src="media/imagen4.png" alt="Imagen del artículo 2" class="article-image">
-            <h2><a href="hacking/articulo2.html">Título del Artículo 2</a></h2>
+            <h2><a href="hacking/unknown.html">En proceso</a></h2>
         </div>         
     </main>
     <script src="js/script.js"></script>
