--- a/network.html
+++ b/network.html
@@ -43,12 +43,24 @@
         <!-- Primer artículo -->
         <div class="article-section">
             <img src="media/imagen2.png" alt="Imagen del artículo 1" class="article-image">
-            <h2><a href="network/articulo1.html">Título del Artículo 1</a></h2>
+            <h2><a href="network/dns.html">DNS</a></h2>
         </div>
-        <!-- Segundo artículo -->
+        <div class="article-section">
+            <img src="media/imagen2.png" alt="Imagen del artículo 1" class="article-image">
+            <h2><a href="network/ftp.html">FTP</a></h2>
+        </div>
+        <div class="article-section">
+            <img src="media/imagen2.png" alt="Imagen del artículo 1" class="article-image">
+            <h2><a href="network/smtp.html">SMTP</a></h2>
+        </div>
+        <div class="article-section">
+            <img src="media/imagen2.png" alt="Imagen del artículo 1" class="article-image">
+            <h2><a href="network/http.html">HTTP</a></h2>
+        </div>        
+        <!-- Nuevo artículo -->
         <div class="article-section">
             <img src="media/imagen2.png" alt="Imagen del artículo 2" class="article-image">
-            <h2><a href="network/articulo2.html">Título del Artículo 2</a></h2>
+            <h2><a href="network/unknown.html">En proceso</a></h2>
         </div>         
     </main>
     <script src="js/script.js"></script>
