--- a/electronica/capacitor.html
+++ b/electronica/capacitor.html
@@ -43,6 +43,7 @@
                 <div class="blog-image-grande">
                     <img src="media/capacitor1.png" alt="">
                 </div>
+                <h2>Cálculo</h2>
                 <p>La capacidad de almacenamiento de un capacitor se mide en términos de su capacitancia, que se representa con la letra "C" y se mide en faradios (F). Un faradio es una cantidad extremadamente grande para la mayoría de aplicaciones prácticas, por lo que los capacitores comunes se expresan en microfaradios (µF), nanofaradios (nF) o picofaradios (pF).</p>
                 <br>
                 <p>Capacitancia (C): La capacitancia se mide en faradios (F) y representa la cantidad de carga eléctrica que un capacitor puede almacenar por unidad de tensión. Para calcular la capacitancia, usa la siguiente fórmula:</p>
@@ -56,6 +57,7 @@
                 <br>
                 <p>Ejemplo de cálculo de capacitancia: Si tienes un capacitor que almacena una carga de 10 coulombs y la tensión entre sus placas es de 5 voltios, la capacitancia sería:</p>
                 <p>C = 10 C / 5 V = 2 F (2 faradios)</p>
+                <h2>Características</h2>
                 <p>Aquí están algunas consideraciones clave para calcular un capacitor:</p>
                 <p>Tensión nominal (V): Es la máxima tensión que el capacitor puede soportar sin sufrir daños o ruptura. Asegúrate de que la tensión nominal del capacitor sea mayor o igual que la tensión máxima en tu circuito.</p>
                 <p>Frecuencia de operación: En algunos casos, especialmente cuando se trabaja con señales de alta frecuencia, es importante tener en cuenta la frecuencia de operación para seleccionar un capacitor adecuado. Algunos capacitores están diseñados para trabajar mejor en ciertos rangos de frecuencia.</p>
@@ -63,6 +65,7 @@
                 <div class="blog-image">
                     <img src="media/capacitor2.jpg" alt="">
                 </div>
+                <h2>Aplicaciones</h2>
                 <p>Los capacitores tienen una amplia gama de aplicaciones en la electrónica y otras áreas. Algunos usos comunes incluyen:</p>
                 <p>- Filtrado y acoplamiento: Los capacitores se utilizan en circuitos electrónicos para filtrar frecuencias no deseadas y acoplar señales entre diferentes etapas de un circuito.</p>
                 <p>- Arranque de motores: En sistemas eléctricos, los capacitores de arranque se utilizan para proporcionar un impulso inicial a los motores eléctricos.</p>
@@ -72,6 +75,7 @@
                 <div class="blog-image">
                     <img src="media/capacitor3.jpg" alt="">
                 </div>                
+                <h2>Tipos de capacitores</h2>
                 <p>Existen varios tipos de capacitores, cada uno con características y aplicaciones específicas. A continuación, se presentan algunos de los tipos más comunes:</p>
                 <p>- Capacitor de cerámica: Son pequeños y económicos. Se utilizan en aplicaciones de alta frecuencia, acoplamientos y desacoplamientos de señales, filtrado y circuitos integrados.</p>
                 <p>- Capacitor electrolítico de aluminio: Tienen una alta capacidad de almacenamiento y se usan en aplicaciones de baja frecuencia, como fuentes de alimentación y acoplamientos de audio.</p>
