--- a/electronica/inductancia.html
+++ b/electronica/inductancia.html
@@ -51,6 +51,7 @@
                 <div class="blog-image-grande">
                     <img src="media/inductor1.jpg" alt="">
                 </div>
+                <h2>Cálculo</h2>
                 <p>Calcular el valor de un inductor (inductancia) es esencial para diseñar y seleccionar componentes adecuados para diferentes aplicaciones electrónicas. La inductancia de un inductor depende de varios factores, incluyendo el número de vueltas en la bobina, el área de la sección transversal, el material del núcleo y la permeabilidad magnética del núcleo, entre otros. Para calcular la inductancia de un inductor, se usan los siguientes métodos:</p>
                 <p>- La inductancia (L) de un solenoide (bobina) en el aire se puede calcular utilizando la siguiente fórmula aproximada:</p>
                 <br>
@@ -64,12 +65,14 @@
                     <p>     l = Longitud de la bobina en metros (m)</p>
                 </center>
                 <br>
+                <h2>Características</h2>
                 <p>- Fórmula para inductancia de un inductor con núcleo de hierro o ferrita: Si el inductor tiene un núcleo de material ferromagnético (como hierro o ferrita), la fórmula para calcular la inductancia es más compleja y depende de la geometría del núcleo. En este caso, se utilizan ecuaciones específicas y tablas de datos proporcionados por los fabricantes de inductores o herramientas de diseño de inductores disponibles en línea.</p>
                 <p>- Simulación y software de diseño: Para inductores más complejos con núcleos específicos o diseños personalizados, a menudo es necesario recurrir a simulaciones con software de diseño de inductores. Estas herramientas de software pueden proporcionar resultados más precisos y tener en cuenta factores como la reluctancia del núcleo, la saturación magnética y otros efectos no lineales.</p>
                 <p>- Valores estándar: En la práctica, los inductores comerciales están disponibles en valores estándar de inductancia, y es posible seleccionar uno que se ajuste a las necesidades del diseño sin necesidad de calcularlo desde cero.</p>
                 <div class="blog-image">
                     <img src="media/inductor2.jpg" alt="">
                 </div>
+                <h2>Aplicaciones</h2>
                 <p>Los inductores tienen una amplia gama de aplicaciones en la electrónica y otras áreas de la tecnología. Algunos usos comunes incluyen:</p>
                 <p>- Filtrado: Se utilizan en circuitos de filtrado para bloquear o atenuar ciertas frecuencias y permitir el paso de otras.</p>
                 <p>- Transformadores: Los inductores con núcleo de hierro o ferrita se utilizan en transformadores para cambiar la tensión de una señal de corriente alterna.</p>
@@ -79,6 +82,7 @@
                 <div class="blog-image-grande">
                     <img src="media/inductor3.jpg" alt="">
                 </div>
+                <h2>Tipos de inductores</h2>
                 <p>Los inductores pueden clasificarse en diferentes tipos según su diseño, construcción y aplicaciones específicas. Aquí están algunos de los tipos más comunes de inductores:</p>
                 <p>- Inductor de bobina o solenoide: Es el tipo más básico y común de inductor. Consiste en un alambre enrollado alrededor de un núcleo, generalmente de aire. Se utiliza ampliamente en aplicaciones como filtros, acoplamientos y almacenamiento de energía.</p>
                 <p>- Inductor de núcleo de hierro: En este tipo de inductor, el alambre está enrollado alrededor de un núcleo de hierro. Los inductores de núcleo de hierro ofrecen una mayor inductancia en comparación con los de núcleo de aire, y se utilizan en aplicaciones que requieren una mayor potencia y eficiencia, como transformadores y bobinas de choque.</p>
