--- a/electronica/resistencia.html
+++ b/electronica/resistencia.html
@@ -43,6 +43,7 @@
                 <div class="blog-image">
                     <img src="media/resistencia1.jpg" alt="">
                 </div>
+                <h2>Conductores</h2>
                 <p>Los conductores eléctricos más comunes son:</p>
                 <p> - Metales: Los metales, como el cobre, la plata, el oro, el aluminio y el hierro, son excelentes conductores eléctricos debido a su estructura cristalina y a la disponibilidad de electrones libres en su banda de conducción. El cobre es especialmente utilizado en la mayoría de las aplicaciones eléctricas debido a su alta conductividad y relativamente bajo costo.</p>
                 <p> - Semiconductores: Los semiconductores varían su resistencia en base a la luz, la temperatura, el dopaje o impurezas, el campo eléctrico o magnético y la tensión aplicada. Aunque los semiconductores tienen una resistencia mayor que los conductores, ciertos semiconductores, como el grafeno, pueden presentar una baja resistencia eléctrica en determinadas condiciones y configuraciones.</p>
@@ -52,10 +53,12 @@
                     <img src="media/resistencia2.jpg" alt="">
                     <img src="media/resistencia3.jpg" alt="">
                 </div>
+                <h2>Cálculo</h2>
                 <p>Es necesario saber calcular el valor de la resistencia para poder obtener los valores deseados en nuestro circuito. Por lo que les dejo una imagen con los significados de cada banda dentro de las resistencias tradicionales.</p>
                 <div class="blog-image-grande">
                     <img src="media/resistencia5.png" alt="">
                 </div>
+                <h2>Tipos de resistencia</h2>
                 <p>Existen otros tipos de resistencias, tales como:</p>
                 <p> - Resistencias fijas: Son resistencias con un valor de resistencia predeterminado que no se puede ajustar. Vienen en diferentes valores de resistencia y potencias para adaptarse a diversas aplicaciones.</p>
                 <p> - Resistencias variables o potenciómetros: Son resistencias que permiten ajustar su valor de resistencia manualmente. Los potenciómetros se utilizan en circuitos donde se requiere un ajuste manual, como en controles de volumen o brillo.</p>
@@ -69,7 +72,7 @@
                 <div class="blog-image-grande">
                     <img src="media/resistencia6.png" alt="">
                 </div>
-                <h1>Ley de Ohm</h1>
+                <h2>Ley de Ohm</h2>
                 <p>La Ley de Ohm es un principio fundamental de la electricidad que describe la relación entre el voltaje, la corriente eléctrica y la resistencia en un circuito eléctrico. Fue formulada por el físico alemán Georg Simon Ohm en 1827.</p>
                 <p>La ley establece que la corriente eléctrica (I) que fluye por un conductor es directamente proporcional al voltaje (V) aplicado al conductor e inversamente proporcional a la resistencia (R) del mismo. Esto se puede expresar matemáticamente como:</p>
                 <br>
