--- a/hacking/owasp.html
+++ b/hacking/owasp.html
@@ -53,6 +53,7 @@
                 <div class="blog-image-zoom">
                     <img src="media/owasp1.png" alt="">
                 </div>
+                <h2>Vulnerabilidades del pasado</h2>
                 <p>OWASP Top 10 ha cambiado a lo largo del tiempo para reflejar la evolución de las amenazas y vulnerabilidades en el ámbito de la seguridad de aplicaciones web. A continuación, te menciono algunas vulnerabilidades que solían formar parte del OWASP Top 10 en el pasado, pero que ya no están presentes en las ediciones más recientes:</p>
                 <p>- Inclusión de Archivos Local (Local File Inclusion - LFI): El LFI es una vulnerabilidad común que permite a los atacantes leer archivos en el servidor que no deberían estar accesibles públicamente. Esta vulnerabilidad solía permitir a los atacantes acceder a información confidencial, como archivos de configuración y contraseñas.</p>
                 <p>- Cross-Site Request Forgery (CSRF): CSRF es una vulnerabilidad que permite a los atacantes engañar a los usuarios autenticados para que realicen acciones no deseadas en una aplicación web. Los atacantes podían aprovechar esta vulnerabilidad para realizar acciones en nombre del usuario sin que este lo supiera.</p>
@@ -61,7 +62,8 @@
                 <p>- Falla en Configuración de Seguridad de HTTP (HTTP Security Configuration Failure): Esta vulnerabilidad se centra en la falta de configuración segura de encabezados HTTP, lo que podía permitir ataques de Cross-Site Scripting (XSS) y Clickjacking.</p>
                 <div class="blog-image-grande">
                     <img src="media/owasp2.jpg" alt="">
-                </div>               
+                </div>
+                <h2>Puntos importantes</h2>               
                 <p>Es importante tener en cuenta que el OWASP Top 10 se actualiza periódicamente para reflejar las vulnerabilidades más relevantes en el momento actual. A medida que se desarrollan nuevas técnicas de ataque y se descubren vulnerabilidades emergentes, algunas vulnerabilidades anteriores pueden quedar obsoletas o ser reemplazadas por otras más críticas. Por lo tanto, es esencial mantenerse informado sobre las últimas tendencias y mejores prácticas en seguridad de aplicaciones web para proteger de manera efectiva los sistemas y datos en línea.</p>
                 <p>Más adelante se tocarán más a detalle algunas de las vulnerabilidades más interesantes y se explicará la metodología que siguen los atacantes para realizar estos ataques. Así que mantente en sintonía para poder comprender cómo funciona el mundo de la ciberseguridad y cómo mantenerte protegido.</p>
                 <br>
