--- a/ia/machineLearning.html
+++ b/ia/machineLearning.html
@@ -37,7 +37,40 @@
         <div class="cover">
             <div class="text__articulo-cover">
                 <h1>Machine Learning</h1>
-                <p>articulo</p>
+                <p>En este artículo, exploraremos cómo esta asombrosa tecnología está cambiando la forma en que interactuamos con la inteligencia artificial y cómo está transformando diversas industrias en la actualidad.</p>
+                <h2>¿Qué es el Machine Learning?</h2>
+                <p>En esencia, el Machine Learning es una rama de la inteligencia artificial que le permite a las computadoras aprender y mejorar automáticamente a través de la experiencia. A diferencia de las instrucciones detalladas que reciben las computadoras tradicionales, los sistemas de Machine Learning pueden "aprender" a realizar tareas específicas sin una programación explícita.</p>
+                <p>Imagina que tienes una mascota muy inteligente, como un perro. Al principio, le enseñas trucos simples, como sentarse o dar la pata. A medida que practicas con él, el perro aprende a realizar estas tareas sin que tengas que repetir las instrucciones una y otra vez. Lo mismo ocurre con el Machine Learning, pero en lugar de un perro, utilizamos algoritmos y datos para que las computadoras aprendan de manera automática.</p>
+                <h2>¿Cómo funciona?</h2>
+                <p>En el corazón del Machine Learning se encuentran los "algoritmos". Estos son como recetas que le indican a la computadora cómo procesar los datos y aprender de ellos. Para que el algoritmo funcione correctamente, necesitamos proporcionarle grandes cantidades de datos de entrenamiento. En el ejemplo del perro, serían las prácticas y ejercicios que le enseñan a realizar trucos.</p>
+                <p>Los datos de entrenamiento son esenciales para que la computadora aprenda patrones y relaciones entre los diferentes elementos. Una vez que el algoritmo ha sido "entrenado", podemos darle nuevos datos que nunca ha visto antes, y la computadora será capaz de hacer predicciones o tomar decisiones basadas en ese aprendizaje previo.</p>
+                <div class="blog-image">
+                    <img src="media/machine1.jpg" alt="">
+                </div>
+                <h2>Aplicaciones prácticas del Machine Learning</h2>
+                <p>El Machine Learning ha revolucionado una amplia gama de industrias, mejorando nuestras vidas de muchas maneras. Aquí hay algunas aplicaciones prácticas que podrían resultar familiares:</p>
+                <p>1. Recomendaciones en línea: Cuando ves sugerencias de películas, música o productos en sitios web como Netflix o Amazon, es probable que estés experimentando Machine Learning en acción. Estos sistemas aprenden de tus elecciones y las de otros usuarios para ofrecerte recomendaciones personalizadas.</p>
+                <p>2. Asistentes de voz inteligentes: Siri, Alexa y Google Assistant son ejemplos de asistentes de voz impulsados por Machine Learning. Estos sistemas pueden entender tus comandos y preguntas cada vez mejor, gracias al aprendizaje continuo de patrones lingüísticos y contextuales.</p>
+                <p>3. Detección de fraudes: En el mundo financiero, el Machine Learning se utiliza para detectar transacciones sospechosas y potenciales fraudes, ayudando a proteger tus cuentas bancarias.</p>
+                <p>4. Medicina y diagnóstico: Los algoritmos de Machine Learning pueden analizar grandes cantidades de datos médicos, como imágenes de resonancias magnéticas o historiales clínicos, para ayudar a los profesionales de la salud a hacer diagnósticos más precisos y rápidos.</p>
+                <div class="blog-image-doble">
+                    <img src="media/machine2.jpg" alt="">
+                    <img src="media/machine3.jpg" alt="">
+                </div>
+                <h2>Conceptos clave</h2>
+                <p>- Algoritmo: Es una secuencia de pasos que una computadora sigue para resolver un problema o realizar una tarea específica.</p>
+                <p>- Datos de entrenamiento: Son los ejemplos que utilizamos para enseñar al algoritmo y permitirle aprender patrones y relaciones.</p>
+                <p>- Inteligencia Artificial: Es un campo de la informática que busca crear máquinas capaces de realizar tareas que normalmente requieren inteligencia humana.</p>
+                <p>- Predicción: Es la capacidad del algoritmo de hacer estimaciones o conjeturas sobre resultados futuros basados en datos históricos.</p>
+                <p>- Aprendizaje Supervisado: Es un tipo de entrenamiento donde el algoritmo recibe datos etiquetados con resultados conocidos y se necesita de ajustes para hacer predicciones precisas.</p>
+                <p>- Aprendizaje No Supervisado: Es un tipo de entrenamiento donde el algoritmo trabaja con datos no etiquetados y busca descubrir patrones y estructuras por sí mismo.</p>
+                <div class="blog-image">
+                    <img src="media/machine5.jpg" alt="">
+                </div>
+                <h2>Conclusión</h2>
+                <p>El Machine Learning es una tecnología emocionante y poderosa que ha llegado para quedarse. A medida que sigue avanzando, podemos esperar ver aún más aplicaciones sorprendentes en nuestras vidas cotidianas, impulsando la innovación y facilitando nuestras tareas diarias. ¡El futuro está aquí, y es inteligente gracias al Machine Learning!</p>
+                <br>
+                <br>
             </div>   
     </main>
     <script src="../js/script.js"></script>
