--- a/network/dns.html
+++ b/network/dns.html
@@ -43,9 +43,10 @@
                 <div class="blog-image-grande">
                     <img src="media/dns1.jpg" alt="">
                 </div>
+                <h2>Funcionamiento</h2>
                 <p>Cuando ingresas una URL en tu navegador, como "www.ejemplo.com", el navegador envía una solicitud al servidor DNS más cercano que tenga almacenada una copia de la "agenda telefónica". Este servidor, conocido como servidor DNS recursivo, busca la dirección IP asociada al nombre de dominio "ejemplo.com" en su base de datos o contacta a otros servidores DNS para obtener la información.</p>
                 <p>El servidor DNS recursivo luego devuelve la dirección IP al navegador, lo que permite que el navegador establezca una conexión con el servidor web que aloja "www.ejemplo.com". Finalmente, la página web se carga y aparece en tu pantalla, todo en cuestión de milisegundos.</p>
-                <h1>Importancia y Seguridad del DNS</h1>
+                <h2>Importancia y seguridad del DNS</h2>
                 <p>El DNS es esencial para el funcionamiento de Internet. Sin él, sería extremadamente difícil recordar o utilizar las direcciones IP numéricas de todos los sitios web que deseamos visitar. Además, el DNS juega un papel crítico en la distribución del tráfico de Internet y ayuda a mejorar la eficiencia de la navegación web.</p>
                 <p>Sin embargo, debido a su importancia, el DNS también se convierte en un objetivo atractivo para ataques cibernéticos, como el envenenamiento de caché DNS o los ataques de denegación de servicio distribuido (DDoS). Por esta razón, se han implementado diversas medidas de seguridad para proteger la integridad y la confiabilidad del DNS.</p>
                 <div class="blog-image-grande">
