--- a/network/http.html
+++ b/network/http.html
@@ -37,23 +37,25 @@
         <div class="cover">
             <div class="text__articulo-cover">
                 <h1>HTTP (Protocolo de Transferencia de Hipertexto)</h1>
-                <p>HTTP (Protocolo de Transferencia de Hipertexto) ha sido el cimiento clave que ha permitido la expansión y popularización de la World Wide Web. A través de HTTP, los usuarios pueden acceder a una inmensa cantidad de recursos, desde páginas web y archivos multimedia hasta servicios en línea y aplicaciones interactivas.</p>
+                <p>HTTP ha sido el cimiento clave que ha permitido la expansión y popularización de la World Wide Web. A través de HTTP, los usuarios pueden acceder a una inmensa cantidad de recursos, desde páginas web y archivos multimedia hasta servicios en línea y aplicaciones interactivas.</p>
                 <p>HTTP es un protocolo de aplicación que se utiliza para la comunicación entre el cliente (generalmente un navegador web) y el servidor que aloja los recursos solicitados. Fue desarrollado por Tim Berners-Lee en 1991 como parte de su propuesta para crear la World Wide Web, y desde entonces se ha convertido en el protocolo estándar para la transferencia de datos en la web.</p>
+                <h2>Funcionamiento</h2>
                 <p>El funcionamiento de HTTP es relativamente sencillo pero poderoso. Cuando un usuario ingresa una dirección web (URL) en su navegador, el navegador envía una solicitud HTTP al servidor que aloja el recurso solicitado. Esta solicitud incluye el método HTTP (como GET, POST, PUT o DELETE), la URL y otros datos relevantes.</p>
                 <p>El servidor recibe la solicitud y procesa la información, ya sea para recuperar una página web, entregar un archivo o realizar alguna otra acción específica, como podría ser la actualización de datos de perfil de usuario. Una vez que el servidor tiene el recurso solicitado listo para enviar, responde al navegador con una respuesta HTTP, que incluye un código de estado que indica si la solicitud se completó con éxito o si ocurrió algún error.</p>
                 <div class="blog-image">
                     <img src="media/http1.jpg" alt="">
                 </div>
-                <h1>Códigos de Estado de HTTP</h1>
+                <h2>Códigos de estado de HTTP</h2>
                 <p>Los códigos de estado son parte esencial de las respuestas HTTP y proporcionan información sobre el resultado de la solicitud. Algunos de los códigos de estado más comunes son:</p>
                 <p>- 200 OK: La solicitud se completó con éxito, y el recurso solicitado se ha entregado correctamente.</p>
                 <p>- 404 Not Found: El recurso solicitado no se encuentra en el servidor.</p>
                 <p>- 500 Internal Server Error: Se produjo un error interno en el servidor al procesar la solicitud.</p>
-                <h1>HTTP y Seguridad</h1>
+                <h2>HTTP y seguridad</h2>
                 <p>Aunque HTTP es un protocolo ampliamente utilizado, presenta algunas vulnerabilidades de seguridad. Debido a que los datos se transfieren en texto claro, los hackers pueden interceptar y leer la información enviada entre el cliente y el servidor. Para abordar este problema, se ha desarrollado HTTPS (HTTP Seguro), que utiliza una capa de seguridad SSL/TLS para cifrar los datos y garantizar una comunicación segura y privada.</p>
                 <div class="blog-image">
                     <img src="media/http2.jpg" alt="">
                 </div>                
+                <h2>Conclusión</h2>
                 <p>HTTP ha sido el impulsor principal detrás del crecimiento exponencial de la World Wide Web. Gracias a este protocolo, las personas de todo el mundo pueden acceder a una vasta cantidad de información y recursos con solo unos clics. Ha sido un habilitador clave para el comercio electrónico, la educación en línea, la comunicación global y mucho más.</p>
                 <p>HTTP es la columna vertebral de la World Wide Web, permitiendo la transferencia rápida y eficiente de información entre los navegadores de los usuarios y los servidores que alojan los recursos web. Su simplicidad y utilidad lo han convertido en el protocolo estándar para la comunicación en la web. A medida que la tecnología avanza, HTTP sigue adaptándose para brindar una experiencia web segura y eficaz en la era digital actual y en el futuro. Gracias a HTTP, el mundo está más conectado y accesible que nunca.</p>
                 <br>
