--- a/network/ftp.html
+++ b/network/ftp.html
@@ -39,18 +39,20 @@
                 <h1>FTP (File Transfer Protocol)</h1>
                 <p>FTP o Protocolo de Transferencia de Archivos es una herramienta esencial que ha sido un pilar fundamental en la transferencia de datos durante décadas, desempeñado un papel clave en el intercambio de información y archivos entre sistemas de computadoras en todo el mundo.</p>
                 <p>El FTP es un protocolo de red que permite transferir archivos de una computadora a otra a través de una red, como Internet. Fue desarrollado por Abhay Bhushan en 1971, cuando era estudiante en el MIT, y desde entonces ha sido ampliamente adoptado y estandarizado.</p>
+                <h2>Funcionamiento</h2>
                 <p>El funcionamiento del FTP es bastante sencillo. Implica dos roles principales: el cliente y el servidor. El cliente es el dispositivo o programa que solicita y descarga los archivos, mientras que el servidor es el dispositivo o programa que almacena y proporciona los archivos solicitados.</p>
                 <p>Cuando un usuario desea transferir archivos a través del FTP, inicia un cliente FTP en su computadora y se conecta al servidor FTP remoto. Una vez establecida la conexión, el cliente puede navegar por los directorios del servidor, subir archivos (transferir archivos desde el cliente al servidor) o descargar archivos (transferir archivos desde el servidor al cliente).</p>
                 <div class="blog-image-grande">
                     <img src="media/ftp1.png" alt="">
                 </div>
-                <h1>Tipos de Conexión FTP</h1>
+                <h2>Tipos de conexión FTP</h2>
                 <p>Existen dos tipos principales de conexiones FTP:</p>
                 <p>- FTP sin cifrar (FTP no seguro): Esta es la forma más antigua y básica de FTP. Los datos se transfieren en texto claro, lo que significa que son susceptibles a la interceptación y lectura por parte de terceros. Como resultado, este método ha sido desplazado por opciones más seguras, especialmente cuando se manejan datos confidenciales.</p>
                 <p>- FTPS (FTP Seguro): Es una versión segura del FTP que utiliza una capa de seguridad SSL/TLS para cifrar los datos durante la transferencia. Esto garantiza que los datos sean confidenciales y protegidos contra posibles ataques de terceros.</p>
                 <div class="blog-image">
                     <img src="media/ftp2.jpg" alt="">
                 </div>
+                <h2>Aplicaciones</h2>
                 <p>El FTP ha sido ampliamente utilizado en diversas aplicaciones y escenarios, como:</p>
                 <p>- Administración de sitios web: Es común utilizar FTP para cargar y administrar archivos en servidores web, lo que permite actualizar y mantener sitios web de manera eficiente.</p>
                 <p>- Intercambio de archivos: Las empresas y organizaciones utilizan FTP para compartir documentos y archivos internamente o con socios y clientes.</p>
@@ -59,6 +61,7 @@
                 <div class="blog-image">
                     <img src="media/ftp3.jpg" alt="">
                 </div>
+                <h2>Conclusión</h2>
                 <p>Aunque el FTP ha sido una herramienta valiosa durante mucho tiempo, en la actualidad, han surgido tecnologías más avanzadas y seguras para la transferencia de archivos, como SCP (Protocolo de Copia Segura) y SFTP (FTP SSH). Estas opciones utilizan cifrado y autenticación más fuertes, brindando una mayor protección de datos.</p>
                 <p>Sin embargo, el FTP sigue siendo ampliamente utilizado en muchos entornos y continúa siendo una solución confiable para transferir archivos. A medida que la tecnología evoluciona, es probable que veamos una coexistencia de protocolos para satisfacer las diversas necesidades de transferencia de archivos en la era digital.</p>
                 <p>En resumen, el FTP ha sido una herramienta invaluable en la transferencia de archivos durante décadas. Ha permitido la conectividad y el intercambio de información en todo el mundo. Aunque su uso se ha diversificado, y existen alternativas más seguras, sigue siendo una opción popular en muchos entornos. Con el continuo avance de la tecnología, el FTP continuará desempeñando un papel relevante en la transferencia de archivos en la era digital.</p>
