--- a/hacking.html
+++ b/hacking.html
@@ -42,8 +42,12 @@
         </div>
         <!-- Primer artículo -->
         <div class="article-section">
-            <img src="media/imagen4.png" alt="Imagen del artículo 1" class="article-image">
+            <img src="media/imagen4.png" alt="OWASP" class="article-image">
             <h2><a href="hacking/owasp.html">OWASP Top 10</a></h2>
+        </div>
+        <div class="article-section">
+            <img src="media/imagen4.png" alt="Linux" class="article-image">
+            <h2><a href="hacking/linux.html">Comandos básicos de linux</a></h2>
         </div>
         <!-- Nuevo artículo -->
         <div class="article-section">
