--- a/electronica.html
+++ b/electronica.html
@@ -42,20 +42,20 @@
         </div>
         <!-- Primer artículo -->
         <div class="article-section">
-            <img src="media/imagen1.png" alt="Imagen del artículo 1" class="article-image">
+            <img src="media/imagen1.png" alt="Resistencia" class="article-image">
             <h2><a href="electronica/resistencia.html">Resistencia</a></h2>
         </div>
         <div class="article-section">
-            <img src="media/imagen1.png" alt="Imagen del artículo 2" class="article-image">
+            <img src="media/imagen1.png" alt="Capacitor" class="article-image">
             <h2><a href="electronica/capacitor.html">Capacitor</a></h2>    
         </div>
         <div class="article-section">
-            <img src="media/imagen1.png" alt="Imagen del artículo 3" class="article-image">
+            <img src="media/imagen1.png" alt="Inductor" class="article-image">
             <h2><a href="electronica/inductancia.html">Inductor</a></h2>
         </div>
         <!-- Nuevo artículo -->
         <div class="article-section">
-            <img src="media/imagen1.png" alt="Imagen del artículo 2" class="article-image">
+            <img src="media/imagen1.png" alt="En proceso" class="article-image">
             <h2><a href="electronica/unknown.html">En proceso</a></h2>
         </div> 
     </main>
