--- a/network.html
+++ b/network.html
@@ -42,24 +42,24 @@
         </div>
         <!-- Primer artículo -->
         <div class="article-section">
-            <img src="media/imagen2.png" alt="Imagen del artículo 1" class="article-image">
+            <img src="media/imagen2.png" alt="DNS" class="article-image">
             <h2><a href="network/dns.html">DNS</a></h2>
         </div>
         <div class="article-section">
-            <img src="media/imagen2.png" alt="Imagen del artículo 1" class="article-image">
+            <img src="media/imagen2.png" alt="FTP" class="article-image">
             <h2><a href="network/ftp.html">FTP</a></h2>
         </div>
         <div class="article-section">
-            <img src="media/imagen2.png" alt="Imagen del artículo 1" class="article-image">
+            <img src="media/imagen2.png" alt="SMTP" class="article-image">
             <h2><a href="network/smtp.html">SMTP</a></h2>
         </div>
         <div class="article-section">
-            <img src="media/imagen2.png" alt="Imagen del artículo 1" class="article-image">
+            <img src="media/imagen2.png" alt="HTTP" class="article-image">
             <h2><a href="network/http.html">HTTP</a></h2>
         </div>        
         <!-- Nuevo artículo -->
         <div class="article-section">
-            <img src="media/imagen2.png" alt="Imagen del artículo 2" class="article-image">
+            <img src="media/imagen2.png" alt="En proceso" class="article-image">
             <h2><a href="network/unknown.html">En proceso</a></h2>
         </div>         
     </main>
