--- a/hacking.html
+++ b/hacking.html
@@ -47,11 +47,11 @@
         </div>
         <div class="article-section">
             <img src="media/imagen4.png" alt="Linux" class="article-image">
-            <h2><a href="hacking/linux.html">Comandos básicos de linux</a></h2>
+            <h2><a href="hacking/linux.html">Comandos básicos de Linux</a></h2>
         </div>
         <!-- Nuevo artículo -->
         <div class="article-section">
-            <img src="media/imagen4.png" alt="Imagen del artículo 2" class="article-image">
+            <img src="media/imagen4.png" alt="En proceso" class="article-image">
             <h2><a href="hacking/unknown.html">En proceso</a></h2>
         </div>         
     </main>
